--- a/tttttest.html
+++ b/tttttest.html
@@ -1,1 +1,1 @@
-<iframe src="https://www.instagram.com/p/B5kWpdigeDU/embed?utm_source=ig_embedembed/captioned/" allowtransparency="true" frameborder="0" height="693" data-instgrm-payload-id="instagram-media-payload-0" scrolling="no" style="background: white; max-width: 658px; width: calc(100% - 2px); border-radius: 3px; border: 1px solid rgb(219, 219, 219); box-shadow: none; display: block; margin: 0px 0px 12px; min-width: 326px; padding: 0px;"></iframe>
+<iframe src="https://www.instagram.com/p/B5kWpdigeDU/embed?utm_source=ig_embedembed" frameborder="0" scrolling="no"></iframe>
