--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@ slug: projects
 
 # (Optional) Write a short (~150 characters) description of this featured tag.
 description: >
-  Previous and on going projects for clients.
+  Personal projects, previous and on going projects for clients.
 ---
