--- a/AngularMaps/index.html
+++ b/AngularMaps/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>NgApp</title>
-  <base href="/AngularMaps">
+  <base href="/AngularMaps/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.fc6446062ed130d2725f.css"></head>
